H1 element z-index problem fixed

--- a/pyconbalkan/core/static/css/components/title.css
+++ b/pyconbalkan/core/static/css/components/title.css
@@ -7,6 +7,7 @@ h1,
 h2,
 h3 {
     line-height: initial;
+    z-index: -1;
 }
 
 h1 {
